--- a/bootstrap-tutorial/index.html
+++ b/bootstrap-tutorial/index.html
@@ -5,22 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./fullpage.min.css"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /> -->
     <!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        .row {
+            margin-top: 20px;
+            min-height: 10rem;
+            background: rgb(0, 255, 0);
+            padding: 10px;
+        }
+        
+        .row div {
+            background: rgb(255, 0, 0);
+            border-right: solid rgb(255, 255, 255) 1px;
+            padding: 1rem 0 1rem 0;
+            text-align: center;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col">align-items-start</div>
+            <div class="col">align-items-start</div>
+            <div class="col">align-items-start</div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">align-items-center</div>
+            <div class="col">align-items-center</div>
+            <div class="col">align-items-center</div>
+        </div>
+        <div class="row align-items-end">
+            <div class="col">align-items-end</div>
+            <div class="col">align-items-end</div>
+            <div class="col">align-items-end</div>
+        </div>
+        <div class="row">
+            <div class="col align-self-start">align-self-start</div>
+            <div class="col align-self-center">align-self-center</div>
+            <div class="col align-self-end">align-self-end</div>
+        </div>
 
+    </div>
 
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script> -->
     <!-- <script src="./fullpage.min.js"></script> -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
+    <script src="./js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 
