--- a/bootstrap-tutorial/columns.html
+++ b/bootstrap-tutorial/columns.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="./fullpage.min.css"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /> -->
     <!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
     <style>
         .row {
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+    <h1 class="text-center p-lg-2">Elementlarni gorizontal joylashtirish</h1>
     <div class="container">
         <div class="row align-items-start">
             <div class="col">align-items-start</div>
@@ -52,14 +53,11 @@
             <div class="col align-self-end">align-self-end</div>
         </div>
 
-    </div>
-
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script> -->
-    <!-- <script src="./fullpage.min.js"></script> -->
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script> -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script> -->
+        <!-- <script src="./fullpage.min.js"></script> -->
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
