add floating input

--- a/bootstrap-tutorial/vertical-columns.html
+++ b/bootstrap-tutorial/vertical-columns.html
@@ -27,7 +27,7 @@
 
 <body class="p-2">
 
-    <!-- <h1 class="text-center p-lg-2">Elementlarni vertical joylashtirish</h1>
+    <h1 class="text-center p-lg-2">Elementlarni vertical joylashtirish</h1>
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-2">justify-content-end</div>
@@ -76,9 +76,9 @@
             <div class="col-xxl-2 ">2</div>
             <div class="col-xxl-2">3</div>
         </div>
-    </div> -->
+    </div>
 
-    <h1 class="p-5 text-center">Vazifa</h1>
+    <!-- <h1 class="p-5 text-center">Vazifa</h1>
 
     <div class="container">
         <div class="row ng-secondary">
@@ -89,7 +89,7 @@
             <div class="col-xxl-2 col-md-4 col-sm-6"></div>
             <div class="col-xxl-2 col-md-4 col-sm-6"></div>
         </div>
-    </div>
+    </div> -->
 
     <script src="./js/bootstrap.min.js"></script>
 </body>
