--- a/javascript-tutorial/atribute-classlist.html
+++ b/javascript-tutorial/atribute-classlist.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Popper Tutorial</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Site</title>
+    <link rel="stylesheet" href="css/bootstrap5.css">
 </head>
 
 <body>
-    <button id="button" aria-describedby="tooltip">My button</button>
-    <div id="tooltip" role="tooltip">My tooltip</div>
+
+    <h1>Hello-Bootstrap</h1>
 
     <script src="js/popper-min.js"></script>
-    <script>
-        const button = document.querySelector('#button');
-        const tooltip = document.querySelector('#tooltip');
 
-        const popperInstance = Popper.createPopper(button, tooltip);
-    </script>
+    <script src="js/bootstrap5.js"></script>
 </body>
 
 </html>
