--- a/javascript-tutorial/atribute-classlist.html
+++ b/javascript-tutorial/atribute-classlist.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Site</title>
+
+    <!-- fremwork to bootstarp -->
     <link rel="stylesheet" href="css/bootstrap5.css">
+
+    <!-- local css file -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- website icon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Bootstrap Site</title>
 </head>
 
 <body>
