Html tags update and add some files

--- a/html-tutorial/html-tags/a.html
+++ b/html-tutorial/html-tags/a.html
@@ -38,6 +38,31 @@
                 <li>Tashrif buyurilgan havolaning tagiga chizilgan va binafsha rangda</li>
         </ul>
 
+        <h1>Global attribultarni ham qo'llab quvvatlaydi.
+                <a style="text-decoration: double;" href="https://www.w3schools.com/tags/ref_standardattributes.asp">Global attributlar</a>
+        </h1>
+
+        <h1>Turli xil ko'rinishlari, turli xil misollarda:</h1>
+        <h2><a id="target" href="#" target="_blank">Boshqa sahifaga target qilish.</a></h2>
+
+        <!-- !Javascriptga qanday bog'lash mumkin? -->
+        <!-- Javascriptga bog'lash: -->
+        <h2><a href="javascript:confirm('Boshlashga tayyormisiz?');">Javascriptga bog'lash.</a></h2>
+
+        <!-- !Telefonga qanday bog'lash mumkin? -->
+        <h2><a href="tel:+4733378901">+47 333 78 901</a></h2>
+
+        <!-- !Emailga qanday bog'lash mumkin? -->
+        <h2><a href="mailto:someone@example.com">Send email</a></h2>
+
+        <!-- !Boshqa bo'limga qanday bog'lash mumkin? -->
+        <h2><a href="#section2">Go to Section 2</a></h2>
+
+        <h2>Ko'proq va aniqroq ma'lumotlar: <br>
+                <h4>W3SCHOOL:<a href="https://www.w3schools.com/tags/tag_a.asp">Click</a></h4>
+                <h4>MDN:<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#properties">Click</a></h4>
+        </h2>
+
         <table>
                 <thead>
                         <tr>
@@ -50,7 +75,10 @@
                         <tr>
                                 <td>download</td>
                                 <td>filename</td>
-                                <td>Foydalanuvchi giperhavolani bosganida maqsad yuklab olinishini bildiradi.<span>Bunga misol: <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#examples">Click</a></span></td>
+                                <td>Foydalanuvchi giperhavolani bosganida maqsad yuklab olinishini bildiradi.<span>Bunga misol:
+                                                <a
+                                                        href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#examples">Click</a></span>
+                                </td>
                         </tr>
                         <tr>
                                 <td>href</td>
@@ -65,40 +93,13 @@
                         <tr>
                                 <td>target</td>
                                 <td>_blank
-                                _parent
-                                _self
-                                _top</td>
+                                        _parent
+                                        _self
+                                        _top</td>
                                 <td>Bog'langan hujjatni qayerda ochish kerakligini belgilaydi <a href="#target">Misol</a></td>
                         </tr>
                 </tbody>
         </table>
-
-        <h1>Global attribultarni ham qo'llab quvvatlaydi.
-                <a style="text-decoration: double;" href="https://www.w3schools.com/tags/ref_standardattributes.asp">Global attributlar</a>
-        </h1>
-
-        <h1>Turli xil ko'rinishlari, turli xil misollarda:</h1>
-        <h2><a id="target" href="#" target="_blank">Boshqa sahifaga target qilish.</a></h2>
-
-        <!-- !Javascriptga qanday bog'lash mumkin? -->
-        <!-- Javascriptga bog'lash: -->
-        <h2><a href="javascript:alert('Hello World!');">Javascriptga bog'lash.</a></h2>
-
-        <!-- !Telefonga qanday bog'lash mumkin? -->
-        <h2><a href="tel:+4733378901">+47 333 78 901</a></h2>
-
-        <!-- !Emailga qanday bog'lash mumkin? -->
-        <h2><a href="mailto:someone@example.com">Send email</a></h2>
-
-        <!-- !Boshqa bo'limga qanday bog'lash mumkin? -->
-        <h2><a href="#section2">Go to Section 2</a></h2>
-        <br>
-        <br>
-
-        <h2>Ko'proq va aniqroq ma'lumotlar: <br>
-                <h4>W3SCHOOL:<a href="https://www.w3schools.com/tags/tag_a.asp">Click</a></h4>
-                <h4>MDN:<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#properties">Click</a></h4>
-        </h2>
         
         <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever
                 since.</p>
