--- a/html-tutorial/html-tags/b.html
+++ b/html-tutorial/html-tags/b.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-
+        <!-- Ushnu teg textni yo'g'onlatshtirish uchun ishlatiladi. -->
+        <p>Lorem ipsum dolor sit amet <b>consectetur adipisicing</b> elit. Odio, repellendus!</p>  
 </body>
 
 </html>
